radix-transactions/tests/assets/manifest_generator_error_undefined_address_reservation_1.diag
error: undefined address reservation 'invalid_reservation'
   |
14 |     Tuple(
15 |         Map<String, Tuple>()
16 |     )
17 |     Blob("f531e5e82dc195a7a9f6709f5ee048d9541d51c52904b7a76295a13ddfa377b1")
18 |     Map<String, Tuple>()
19 |     Some(AddressReservation("invalid_reservation"))
   |                             ^^^^^^^^^^^^^^^^^^^^^ undefined address reservation
20 | ;
21 | CALL_FUNCTION
22 |     NamedAddress("my_package")
23 |     "BlueprintName"
24 |     "no_such_function"
   |